Project

General

Profile

Actions

Bug #56535

closed

osd crashs due to space reclamation transaction exceeds the max record size limit

Added by Xuehan Xu almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Actions #1

Updated by Xuehan Xu almost 2 years ago

  • Subject changed from osd crash due to space reclamation transaction exceeds the max record size limit to osd crashs due to space reclamation transaction exceeds the max record size limit
Actions #2

Updated by Xuehan Xu almost 2 years ago

  • Pull request ID set to 47125
Actions #3

Updated by Xuehan Xu over 1 year ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF