crimson/os/seastore/async_cleaner: only merge necessary backrefs when reclaiming space

This should be able to prevent space reclamation transaction from growing so
large that it exceed the max record size

Fixes: https://tracker.ceph.com/issues/56535
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>